crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@non-empty-record.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/type/non-empty-record.input
---
Input: { a :: Hello, b :: Hello }

Start { kind: RecordType }
  Start { kind: Wrapped }
    Token { kind: LeftCurly }
    Start { kind: RowInner }
      Start { kind: Separated }
        Start { kind: RowField }
          Start { kind: Name }
            Token { kind: Label }
          Finish
          Token { kind: Colon2 }
          Start { kind: ConstructorType }
            Start { kind: QualifiedName }
              Start { kind: NameRef }
                Token { kind: Upper }
              Finish
            Finish
          Finish
        Finish
        Token { kind: Comma }
        Start { kind: RowField }
          Start { kind: Name }
            Token { kind: Label }
          Finish
          Token { kind: Colon2 }
          Start { kind: ConstructorType }
            Start { kind: QualifiedName }
              Start { kind: NameRef }
                Token { kind: Upper }
              Finish
            Finish
          Finish
        Finish
      Finish
    Finish
    Token { kind: RightCurly }
  Finish
Finish

