crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@not-qualified-operator.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/failing/expression/not-qualified-operator.input
---
Input: Invalid.(invalid)

Start { kind: OperatorNameExpression }
  Start { kind: QualifiedName }
    Start { kind: QualifiedPrefix }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
      Token { kind: Period }
    Finish
    Start { kind: Wrapped }
      Token { kind: LeftParenthesis }
      Start { kind: Error }
        Token { kind: Lower }
        Error { message: "expected an operator" }
      Finish
      Token { kind: RightParenthesis }
    Finish
  Finish
Finish
