crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@parenthesized-binder-negative.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/pattern/parenthesized-binder-negative.input
---
Input: (-1)
Start { kind: BinderOperatorChain }
  Start { kind: ParenthesizedBinder }
    Token { kind: LeftParenthesis }
    Start { kind: BinderOperatorChain }
      Start { kind: NegativeBinder }
        Token { kind: Minus }
        Start { kind: LiteralBinder }
          Token { kind: LiteralInteger }
        Finish
      Finish
      Start { kind: OneOrMore }
      Finish
    Finish
    Token { kind: RightParenthesis }
  Finish
  Start { kind: OneOrMore }
  Finish
Finish
