crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@parenthesized-masks-layout-rules.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/expression/parenthesized-masks-layout-rules.input
---
Input: do
  (
this
should
not
be
legal
but
it
is
  )
  [
this,
as,
well
  ]

Start { kind: ApplicationExpression }
  Start { kind: DoExpression }
    Start { kind: QualifiedDo }
      Token { kind: DoKw }
    Finish
    Token { kind: LayoutStart }
    Start { kind: DoDiscard }
      Start { kind: ApplicationExpression }
        Start { kind: ParenthesizedExpression }
          Token { kind: LeftParenthesis }
          Start { kind: ApplicationExpression }
            Start { kind: VariableExpression }
              Start { kind: QualifiedName }
                Start { kind: NameRef }
                  Token { kind: Lower }
                Finish
              Finish
            Finish
            Start { kind: OneOrMore }
              Start { kind: TermArgument }
                Start { kind: VariableExpression }
                  Start { kind: QualifiedName }
                    Start { kind: NameRef }
                      Token { kind: Lower }
                    Finish
                  Finish
                Finish
              Finish
            Finish
          Finish
          Error { message: "expected RightParenthesis, but got Lower" }
        Finish
        Start { kind: OneOrMore }
          Start { kind: TermArgument }
            Start { kind: VariableExpression }
              Start { kind: QualifiedName }
                Start { kind: NameRef }
                  Token { kind: Lower }
                Finish
              Finish
            Finish
          Finish
        Finish
      Finish
    Finish
    Error { message: "expected LayoutSep or LayoutEnd" }
  Finish
  Start { kind: OneOrMore }
    Start { kind: TermArgument }
      Start { kind: VariableExpression }
        Start { kind: QualifiedName }
          Start { kind: NameRef }
            Token { kind: Lower }
          Finish
        Finish
      Finish
    Finish
  Finish
Finish
