crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@qualified-operator-name.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/type/qualified-operator-name.input
---
Input: Add.(+)

Start { kind: TypeOperatorChain }
  Start { kind: ApplicationType }
    Start { kind: OperatorNameType }
      Start { kind: QualifiedName }
        Start { kind: QualifiedPrefix }
          Start { kind: NameRef }
            Token { kind: Upper }
          Finish
          Token { kind: Period }
        Finish
        Start { kind: Wrapped }
          Token { kind: LeftParenthesis }
          Start { kind: NameRef }
            Token { kind: Operator }
          Finish
          Token { kind: RightParenthesis }
        Finish
      Finish
    Finish
    Start { kind: OneOrMore }
    Finish
  Finish
  Start { kind: OneOrMore }
  Finish
Finish
