crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@qualified-operator-unfinished.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/failing/expression/qualified-operator-unfinished.input
---
Input: Add.(+

Start { kind: ExpressionOperatorChain }
  Start { kind: ExpressionInfixChain }
    Start { kind: ApplicationExpression }
      Start { kind: OperatorNameExpression }
        Start { kind: QualifiedName }
          Start { kind: QualifiedPrefix }
            Start { kind: NameRef }
              Token { kind: Upper }
            Finish
            Token { kind: Period }
          Finish
          Start { kind: Wrapped }
            Token { kind: LeftParenthesis }
            Start { kind: NameRef }
              Token { kind: Operator }
            Finish
            Error { message: "expected RightParenthesis, but got EndOfFile" }
          Finish
        Finish
      Finish
      Start { kind: OneOrMore }
      Finish
    Finish
    Start { kind: OneOrMore }
    Finish
  Finish
  Start { kind: OneOrMore }
  Finish
Finish
